--- a/bower.json
+++ b/bower.json
@@ -3,8 +3,8 @@
     "repository": "git://github.com/kingsonline/adapt-article-background",
     "homepage": "https://github.com/kingsonline/adapt-article-background",
     "framework": "^2.0.0",
-    "version": "0.0.5",
-    "issues": "The 'backgroundColor' option needs validation adding to it to stop potentially unwanted CSS from being imlemented. Plugin needs browser testing.",
+    "version": "0.1.0",
+    "issues": "The 'backgroundColor' option needs validation adding to it to stop potentially unwanted CSS from being implemented. Plugin needs browser testing.",
     "displayName": "Article Background",
     "extension" : "articleBackground",
     "description": "Adds the option of implementing a background graphic or colour to a article element.",
